added the cart and cart summary

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,6 +37,11 @@
   padding: 2em;
 }
 
+.card:hover {
+  transform: scale(1.02);
+  transition: 0.3s ease-in-out;
+}
+
 .read-the-docs {
   color: #888;
 }
